# anticaptcha

./: anticaptcha.cabal
Data/: AntiCaptcha.hs
