name:               anticaptcha
version:            1.0.0
cabal-version:      >= 1.16
license:            OtherLicense
license-file:       License.md
category:           Web, Yesod
author:             Robbie Bykowski
homepage:           http://github.com/nebulafox/anticapcha
stability:          stable
synopsis:           A base to be used in anticaptcha forms

build-type:         Simple

library
    default-language: Haskell2010
    
    exposed-modules: Data.AntiCaptcha
    
    other-extensions: OverloadedStrings
    
    build-depends: base >= 4 && < 5
                 , text
                 , utf8-string
                 , cryptohash